# IZ2

./: .gitignore  CMakeLists.txt  Makefile  README.md  in.txt  main.c
.github/workflows/: ci.yml
lib1/: CMakeLists.txt  easy_method.h  matrix.c  matrix.h  solve_easy.c
lib2/: CMakeLists.txt  parallel_matrix.c  parallel_matrix.h
linters/: run.sh
mains/: main1.c  main2.c
mains/common/: header.h  realisation.c
src/: main.c  main1.c  main2.c
tests/: CMakeLists.txt  mytest.cpp
